@@ -1,6 +1,6 @@
 <h2><%=l(:label_custom_field)%> (<%=l(@custom_field.type_name)%>)</h2>
 
-<%= start_form_tag({:action => 'edit', :id => @custom_field}, :class => "tabular") %>
-  <%= render :partial => 'form', :locals => { :type => @custom_field.type } %>
-  <%= submit_tag l(:button_save) %>
-<%= end_form_tag %>
+<% labelled_tabular_form_for :custom_field, @custom_field, :url => { :action => "edit", :id => @custom_field } do |f| %>
+<%= render :partial => 'form', :locals => { :f => f } %>
+<%= submit_tag l(:button_save) %>
+<% end %>
